fix overflow issue

--- a/frontend/src/components/Dashboard.css
+++ b/frontend/src/components/Dashboard.css
@@ -5,12 +5,12 @@
 
 #sideContainer {
   padding: 0;
-  height: 100vh;
+  height: 90vh;
 }
 
 #contentContainer {
   border-radius: 10px;
-  height: 600px;
+  height: 90vh;
   overflow-y: auto;
   background-color: #bebebe;
 }
