--- a/frontend/src/components/main.css
+++ b/frontend/src/components/main.css
@@ -7,13 +7,11 @@ html, body {
   height: 100%;
   margin: 0;
   padding: 0;
-  overflow-y: hidden;
 }
 
 .main {
 	margin: 0 auto;
 	padding-top: 1%;
-	overflow-y: hidden;
 }
 
 .navbar {
